--- a/d1-master/Project_Economic/src/main/resources/application.properties
+++ b/d1-master/Project_Economic/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 server.port=3000
 spring.datasource.url=jdbc:mysql://localhost:3306/project
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=1234567
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
